--- a/src/styles.css
+++ b/src/styles.css
@@ -35,6 +35,7 @@ body {
     display: grid;
     place-items: center;
     height: 1.5rem;
+    min-width: 3rem;
     border-radius: 5px;
     border: 1px solid rgb(150, 150, 150);
     background-color: var(--main-button);
