--- a/src/app/components/map/layer-control/layer-control.component.html
+++ b/src/app/components/map/layer-control/layer-control.component.html
@@ -3,7 +3,7 @@
         <div class="button" [class.active]=feature.show (click)="toggleLayer()" matTooltip="Toggle Layer">
             {{ feature.name }}
         </div>
-        <div class="button" (click)="toggleControl()" matTooltip="Layer Options">
+        <div class="button map-options" (click)="toggleControl()" matTooltip="Layer Options">
             <mat-icon>settings</mat-icon>
         </div>
     </div>
