--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" id="about">
     <h2>What is HMS?</h2>
     Hydrologic Micro Services, HMS, is a hydrologic and water quality modeling system comprised of data provisioning and modeling components and workflows to facilitate environmental modeling.
     In addition to this web application, these components are also available as <a href="/hms/api_doc/">web services</a> and <a href="https://github.com/quanted/hms" target="_blank" title="desktop libraries">desktop libraries</a>
@@ -11,7 +11,7 @@
 
     Additional information about HMS and how to use the components can be found on the <a href="/hms/help/">HMS documentation help page.</a>
 
-    <div class="button" (click)="gotoMain()">Got it</div>
+    <div class="button" (click)="close()">Got it</div>
     
     <h4>Disclaimers</h4>
     HMS functionality will be limited when using the Internet Explorer web browser. We recommend using the latest
