--- a/src/app/components/input/input/input.component.html
+++ b/src/app/components/input/input/input.component.html
@@ -16,7 +16,7 @@
                         <div class="vertical-center">
                             <div>Comid <input type="number" class="input-comid" formControlName="pPointComid" /></div>
                         </div>
-                        <div class="button" (click)="getCatchment()" matTooltip="Get Pour Point">Get Pour Point by comid</div>
+                        <div class="button" (click)="getCatchment()" matTooltip="Get Pour Point">Get Pour Point by ComId</div>
                     </div>
                     <div class="centered">- or -</div>
                     <div class="centered">
