updated output to use js object and added table catchment changing

--- a/src/app/components/output/output.component.html
+++ b/src/app/components/output/output.component.html
@@ -21,7 +21,7 @@
                             </svg>
                         </div>
                         <app-plot-container (deleteItem)="delete($event)" [dropListData]="dropListData[i]" [index]="i"
-                            [simData]="simData">
+                            [catchment_data]="catchment_data">
                         </app-plot-container>
                     </div>
                 </div>
