--- a/src/app/components/output/output.component.css
+++ b/src/app/components/output/output.component.css
@@ -11,11 +11,31 @@ app-footer {
 .task-bar {
     width: 95%;
     margin: 0 auto 5px auto;
+    display: flex;
+    flex-direction: row;
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
+}
+
+.back {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: x-large;
+}
+
+.segment-status {
+  margin: 0 1px 0 1px;
 }
 
 .add {
     transform: scale(1.3);
     color: rgba(0, 0, 0, 0.54);
+    position: absolute;
+    right: 30px;
 }
 
 /*****************/ 
