added back about help buttons, moved add container

--- a/src/app/components/output/output.component.css
+++ b/src/app/components/output/output.component.css
@@ -48,7 +48,7 @@ app-footer {
 .cdkDropListGroup {
   display: flex;
   justify-content: space-between;
-  flex-wrap: wrap; /* NEW */
+  flex-wrap: wrap;
   width: 100%;
   height: 100%;
 }
