--- a/src/app/components/output/output.component.html
+++ b/src/app/components/output/output.component.html
@@ -3,13 +3,14 @@
     <div class="task-bar">
         <div class="row">
             <mat-icon class="segment-status back">chevron_left</mat-icon>
-            <div class="segment-status">About</div>
-            <div class="segment-status">Help</div>
+            <div class="segment-status" (click)="aboutAQT()">About</div>
+            <div class="segment-status" (click)="openHelp()">Help</div>
         </div>
         <mat-icon class="add" (click)="add()" matTooltip="Add a new container to the dashboard."
             matTooltipPosition="after">add_box</mat-icon>
     </div>
-    <div class="dashboard-container">
+    <app-about *ngIf="showAbout" (closeMe)="closeAbout()"></app-about>
+    <div *ngIf="!showAbout" class="dashboard-container">
         <div class="cdkDropListGroup" cdkDropListGroup>
             <ng-container *ngFor="let item of dropListData; let i=index">
                 <div #cdk class="cdkDropList" cdkDropList cdkDropListOrientation="horizontal"
