added input directive for switching app-about css classes

--- a/src/app/components/ui/expansion-panel-left/expansion-panel-left.component.html
+++ b/src/app/components/ui/expansion-panel-left/expansion-panel-left.component.html
@@ -30,5 +30,5 @@
             </div>
         </div>
     </div>
-    <app-about *ngIf="showAbout" (closeMe)="closeAbout()"></app-about>
+    <app-about [input]="true" *ngIf="showAbout" (closeMe)="closeAbout()"></app-about>
 </div>
