--- a/src/app/components/about/about.component.css
+++ b/src/app/components/about/about.component.css
@@ -1,4 +1,8 @@
-.container {
+.container-input-page, .container-output-page {
+    z-index: 999;
+    inset: 0;
+    min-width: 500px;
+    max-height: var(--main-max-panel-height);
     padding-left: 1rem;
     padding-right: 1rem;
     overflow-y: scroll;
@@ -6,15 +10,14 @@
     background-color: var(--main-color);
 }
 
+.container-input-page {
+    position: absolute;
+}
+.container-output-page {
+    position: relative;
+}
+
 .container > h2 {
     margin: 0;
     padding-top: .5rem;
-}
-
-#about {
-    position: absolute;
-    z-index: 999;
-    inset: 0;
-    min-width: 500px;
-    max-height: var(--main-max-panel-height);
 }
