--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,44 +1,56 @@
-<div class="container" id="about">
+<div [ngClass]="input ? 'container-input-page' : 'container-output-page'" id="about">
     <h2>What is HMS?</h2>
-    Hydrologic Micro Services, HMS, is a hydrologic and water quality modeling system comprised of data provisioning and modeling components and workflows to facilitate environmental modeling.
-    In addition to this web application, these components are also available as <a href="/hms/api_doc/">web services</a> and <a href="https://github.com/quanted/hms" target="_blank" title="desktop libraries">desktop libraries</a>
-    
+    Hydrologic Micro Services, HMS, is a hydrologic and water quality modeling system comprised of data provisioning and
+    modeling components and workflows to facilitate environmental modeling.
+    In addition to this web application, these components are also available as <a href="/hms/api_doc/">web services</a>
+    and <a href="https://github.com/quanted/hms" target="_blank" title="desktop libraries">desktop libraries</a>
+
     <h3>How do I use HMS?</h3>
-    HMS users can use the system components and workflows directly or build their own workflows outside the HMS web site by linking the components. Each component is available as a web service as well as a library for integration into workflows.
-    HMS is an integrated modeling system to facilitate easier integration of new academic research on physical, chemical and biological processes into environmental models.
-    <a href="/static_qed/hms/images/state_of_model_integration.jpg" target="_blank">Figure 1</a> depicts the ways HMS components and web services can be integrated into workflows.
+    HMS users can use the system components and workflows directly or build their own workflows outside the HMS web site
+    by linking the components. Each component is available as a web service as well as a library for integration into
+    workflows.
+    HMS is an integrated modeling system to facilitate easier integration of new academic research on physical, chemical
+    and biological processes into environmental models.
+    <a href="/static_qed/hms/images/state_of_model_integration.jpg" target="_blank">Figure 1</a> depicts the ways HMS
+    components and web services can be integrated into workflows.
     The target users for HMS are hydrological and water quality modelers and analysts.
 
-    Additional information about HMS and how to use the components can be found on the <a href="/hms/help/">HMS documentation help page.</a>
+    Additional information about HMS and how to use the components can be found on the <a href="/hms/help/">HMS
+        documentation help page.</a>
 
     <div class="button" (click)="close()">Got it</div>
-    
+
     <h4>Disclaimers</h4>
     HMS functionality will be limited when using the Internet Explorer web browser. We recommend using the latest
-        version of Google Chrome, Microsoft Edge, or Mozilla Firefox.
+    version of Google Chrome, Microsoft Edge, or Mozilla Firefox.
     This software/application has been approved for release by the U.S. Environmental Protection Agency (USEPA).
-        Although the software has been subjected to rigorous review, the USEPA reserves the right to update the software
-        as needed pursuant to further analysis and review. No warranty, expressed or implied, is made by the USEPA or
-        the U.S. Government as to the functionality of the software and related material nor shall the fact of release
-        constitute any such warranty. Furthermore, the software is released on condition that neither the USEPA nor the
-        U.S. Government shall be held liable for any damages resulting from its authorized or unauthorized use.
-    
+    Although the software has been subjected to rigorous review, the USEPA reserves the right to update the software
+    as needed pursuant to further analysis and review. No warranty, expressed or implied, is made by the USEPA or
+    the U.S. Government as to the functionality of the software and related material nor shall the fact of release
+    constitute any such warranty. Furthermore, the software is released on condition that neither the USEPA nor the
+    U.S. Government shall be held liable for any damages resulting from its authorized or unauthorized use.
+
     <h2>Structure of HMS</h2>
     <h3>Components</h3>
-    An HMS component is a module that encapsulates a set of related functions and data representing a physical process in
-        hydrology or fate and transport of a contaminant in water.  HMS components are presented as web services, software
-        libraries, and web forms. Additional sub-components are available within these components; such as Curve Number within
-        Surface Runoff and Baseflow, and Constant Volume Routing within Streamflow.
-    
+    An HMS component is a module that encapsulates a set of related functions and data representing a physical process
+    in
+    hydrology or fate and transport of a contaminant in water. HMS components are presented as web services, software
+    libraries, and web forms. Additional sub-components are available within these components; such as Curve Number
+    within
+    Surface Runoff and Baseflow, and Constant Volume Routing within Streamflow.
+
     <h4>Work Flows</h4>
-    An HMS workflow is an orchestrated pattern of executing components to simulate movement and storage of water and the consequential effects on fate and transport of contaminants in water. The following workflows are currently available in HMS:
+    An HMS workflow is an orchestrated pattern of executing components to simulate movement and storage of water and the
+    consequential effects on fate and transport of contaminants in water. The following workflows are currently
+    available in HMS:
     <ul>
         <li>Precipitation Data Extraction</li>
         <li>Precipitation Comparison</li>
         <li>Streamflow</li>
     </ul>
     <h4>Meteorology</h4>
-    Meteorological components in HMS represent major physical processes that are utilized as forcing data for hydrologic modeling. The following meteorology component(s) are currently available in HMS:
+    Meteorological components in HMS represent major physical processes that are utilized as forcing data for hydrologic
+    modeling. The following meteorology component(s) are currently available in HMS:
     <ul>
         <li>Humidity</li>
         <li>Precipitation</li>
@@ -47,7 +59,8 @@
         <li>Wind</li>
     </ul>
     <h4>Hydrology</h4>
-    Hydrological components in HMS represent major physical processes affecting water quantity, storage, and flow. The following hydrology component(s) are currently available in HMS:
+    Hydrological components in HMS represent major physical processes affecting water quantity, storage, and flow. The
+    following hydrology component(s) are currently available in HMS:
     <ul>
         <li>Evapotranspiration</li>
         <li>Surface Runoff</li>
@@ -58,15 +71,20 @@
         <h4 class="pane-title">Key Links</h4>
         <div class="pane-content">
             <ul>
-                <li><a href="https://www.epa.gov/ceam" target="_blank" title="Center for Exposure Assessment Modeling">Center for Exposure Assessment Modeling</a></li>
-                <li><a href="https://www.epa.gov/waterdata/hawqs-hydrologic-and-water-quality-system" target="_blank" title="Hydrologic and Water Quality System">Hydrologic and Water Quality System</a></li>
-                <li><a href="https://www.epa.gov/waterdata/water-quality-portal-data-discovery-tool" target="_blank" title="Water Quality Portal Data">Water Quality Portal Data</a></li>
-                <li><a href="https://www.epa.gov/waterdata/nhdplus-national-hydrography-dataset-plus" target="_blank" title="National Hydrography Dataset Plus">National Hydrography Dataset Plus</a></li>
+                <li><a href="https://www.epa.gov/ceam" target="_blank"
+                        title="Center for Exposure Assessment Modeling">Center for Exposure Assessment Modeling</a></li>
+                <li><a href="https://www.epa.gov/waterdata/hawqs-hydrologic-and-water-quality-system" target="_blank"
+                        title="Hydrologic and Water Quality System">Hydrologic and Water Quality System</a></li>
+                <li><a href="https://www.epa.gov/waterdata/water-quality-portal-data-discovery-tool" target="_blank"
+                        title="Water Quality Portal Data">Water Quality Portal Data</a></li>
+                <li><a href="https://www.epa.gov/waterdata/nhdplus-national-hydrography-dataset-plus" target="_blank"
+                        title="National Hydrography Dataset Plus">National Hydrography Dataset Plus</a></li>
                 <li><a href="https://www.epa.gov/research" target="_blank" title="EPA Research">EPA Research</a></li>
             </ul>
         </div>
     </div>
     <div>
-        If you wish to make a comment or suggestion please use the contact us form here: <a href="/hms/contact/">Submit a comment</a>.
+        If you wish to make a comment or suggestion please use the contact us form here: <a href="/hms/contact/">Submit
+            a comment</a>.
     </div>
 </div>
