--- a/src/app/components/output/output.component.css
+++ b/src/app/components/output/output.component.css
@@ -13,9 +13,15 @@ app-footer {
     margin: 0 auto 5px auto;
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
 }
 
-.row {
+.row-left {
+  display: flex;
+  flex-direction: row;
+}
+
+.row-right {
   display: flex;
   flex-direction: row;
 }
@@ -34,8 +40,6 @@ app-footer {
 .add {
     transform: scale(1.3);
     color: rgba(0, 0, 0, 0.54);
-    position: absolute;
-    right: 30px;
 }
 
 /*****************/ 
@@ -43,6 +47,10 @@ app-footer {
     min-width: 0;
     min-height: 0;
     margin: 0 20px 20px 20px;
+}
+
+.hide {
+  display: none;
 }
 
 .cdkDropListGroup {
