--- a/src/app/components/output/plot-container/plot-container.component.css
+++ b/src/app/components/output/plot-container/plot-container.component.css
@@ -10,11 +10,15 @@
     grid-template-rows: auto 1fr;
 }
 
-.container {
+.container, .container-legend {
     box-sizing: border-box;
     height: 100%; 
     width: 100%; 
     overflow: hidden;
+}
+
+.container-legend {
+    padding-right: 20px;
 }
 
 .mat-form-field-ripple {
