hardcode remin vars. remove unused example jsons

--- a/src/app/components/input/comid-select-input/comid-select-input.component.html
+++ b/src/app/components/input/comid-select-input/comid-select-input.component.html
@@ -3,7 +3,7 @@
   <div class="centered">- or -</div>
   <div class="form-row">
     <div class="vertical-center">
-      <div>Comid <input class="input-comid" type="number" formControlName="comid" /></div>
+      <div>Comid <input class="input-number" type="number" formControlName="comid" /></div>
     </div>
     <div class="button" (click)="selectSegment()">Select Segment</div>
   </div>
