--- a/src/app/components/input/input/input.component.html
+++ b/src/app/components/input/input/input.component.html
@@ -3,7 +3,7 @@
     <div *ngIf="!simExecuting && !simCompleted">
         <div class="scroll-pane">
             <!-- AOI section -->
-            <div class="container-item">
+            <div class="container-item" [formGroup]="aoiForm">
                 <div class="section-heading">
                     <div id="this is just here as a spacer"></div>
                     <strong class="section-heading-center">Study Area</strong>
@@ -12,18 +12,15 @@
                     </div>
                 </div>
                 <div class="section-item" *ngIf="!huc">
-                    <div class="form-row" [formGroup]="pPointForm">
+                    <div class="form-row">
                         <div class="vertical-center">
-                            <div>Comid <input type="number" class="input-comid" formControlName="pPointComid" /></div>
+                            <div>Comid <input type="number" class="input-number" formControlName="pPointComid" /></div>
                         </div>
                         <div class="button" (click)="getCatchment()" matTooltip="Get Pour Point">Get Pour Point by ComId</div>
                     </div>
                     <div class="centered">- or -</div>
                     <div class="centered">
                         <strong>Click map to select HUC 12</strong>
-                        <!-- <select>
-                            <option value="12">HUC 12</option>
-                        </select> -->
                     </div>
                 </div>
                 <div class="section-item" *ngIf="huc">
@@ -43,11 +40,13 @@
                         </div>
                     </div>
 
-                    <div *ngIf="catchment && !network.network" [formGroup]="distanceForm">
-                        <div class="form-row">Upstream Distance (Km)<input type="number" formControlName="distance"></div>
+                    <div *ngIf="catchment && !network.network">
+                        <div class="form-row">Enter Upstream End Comid<input type="number" formControlName="endComid" /></div>
+                        <div class="centered">- or -</div>
+                        <div class="form-row">Upstream Distance (Km)<input type="number" formControlName="distance" /></div>
                     </div>
                     <div class="button" *ngIf="huc && catchment && !network.network && !waiting" (click)="getStreamNetwork()">
-                        Get stream network
+                        Get Stream Network
                     </div>
                 </div>
                 <div class="button" *ngIf="waiting">
@@ -58,11 +57,11 @@
             <!-- Aquatox section -->
             <div class="container-item" *ngIf="network.network">
                 <div class="section-item" *ngIf="jsonFlags && !baseJson" [formGroup]="moduleForm">
-                    <div class="centered"><strong>Select Base Simulation</strong></div>
-                    <div>Base Simulation Selection Options</div>
+                    <div class="centered"><strong>Select Simulation</strong></div>
+                    <div>Simulation Selection Options</div>
                     <div *ngFor='let flag of jsonFlags'><input formControlName="{{flag}}" type="checkbox" /> {{ flag }}
                     </div>
-                    <div class="button" (click)="getBaseJSONByFlags()">Get Base Simulation</div>
+                    <div class="button" (click)="getBaseJSONByFlags()">Setup Simulation</div>
                 </div>
 
                 <!-- PSetup section -->
@@ -72,6 +71,14 @@
                         <strong class="section-heading-center">Simulation Setup</strong>
                         <div>
                             <mat-icon class="icon-panel-toggle float-right" matTooltipPosition="right" matTooltip="Collapse section">expand_less</mat-icon>
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div>
+                            Study Name
+                        </div>
+                        <div>
+                            <input type="text" formControlName="studyName">
                         </div>
                     </div>
                     <div class="section-item">
@@ -86,24 +93,38 @@
                             </div>
                         </div>
                         <div class="form-row">
-                            <div class="vertical-center">Time Step size</div>
+                            <div class="vertical-center">Simulation Output</div>
                             <div class="form-row">
                                 <div>Hour <input type="radio" name="tStep" formControlName="tStep" value="hour"></div>
                                 <div>Day <input type="radio" name="tStep" formControlName="tStep" value="day"></div>
                             </div>
                         </div>
                         <div class="form-row">
-                            Use Alternate Step Size <input type="checkbox" formControlName="useFixStepSize" />
+                            Use Alternate Step Size <input type="checkbox" formControlName="useFixStepSize" (click)="toggleAltStep()" />
                         </div>
-                        <div class="form-row" *ngIf="">
-                            Step Size <input type="number" formControlName="fixStepSize" />
+                        <div class="form-row" *ngIf="useFixStepSize">
+                            Step Size <input type="number" class="input-number" formControlName="fixStepSize" />
                         </div>
-                        <div>Advanced<mat-icon class="icon-panel-toggle" matTooltip="See Advanced Options">expand_more</mat-icon></div>
+                        <div>Advanced<mat-icon class="icon-panel-toggle" matTooltip="See Advanced Options NOT YET IMPLEMENTED" 
+                            (click)="toggleAdvanced('pSetup')">expand_more</mat-icon></div>
+                        <div class="section-item" *ngIf="showPSetupAdvanced && advancedPSetupFields.length">
+                            <div class="form-row" *ngFor="let pSetupField of advancedPSetupFields">
+                                <div>{{ pSetupField.displayName }}</div>
+                                <div class="vertical-center">
+                                    <div>
+                                        <input type="number" class="input-number" formControlName="{{ pSetupField.param }}" matTooltip="{{ pSetupField.param }}"/>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="section-item" *ngIf="showPSetupAdvanced && !advancedPSetupFields.length">
+                            <div class="centered">There are currently no advanced options available</div>
+                        </div>
                     </div>
                 </div>
 
                 <!-- Locale section -->
-                <div *ngIf="baseJson" [formGroup]="localeForm">
+                <!-- <div *ngIf="baseJson" [formGroup]="localeForm">
                     <div class="centered"><strong>Locale</strong></div>
                     <div class="form-row">
                         <div>
@@ -116,24 +137,52 @@
                     <div class="section-item">
                         <div class="form-row">
                         </div>
-                        <div>Advanced<mat-icon class="icon-panel-toggle" matTooltip="See Advanced Options">expand_more</mat-icon></div>
+                        <div>Advanced<mat-icon class="icon-panel-toggle" matTooltip="See Advanced Options NOT YET IMPLEMENTED"
+                            (click)="toggleAdvanced('locale')">expand_more</mat-icon></div>
+                        <div class="section-item" *ngIf="showLocaleAdvanced">
+                            <div class="form-row" *ngFor="let localeField of advancedLocaleFields">
+                                <div>{{ localeField.displayName }}</div>
+                                <div class="vertical-center">
+                                    <div>
+                                        <input type="number" class="input-number" formControlName="{{ localeField.param }}" matTooltip="{{ localeField.param }}"/>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="section-item" *ngIf="showLocaleAdvanced && !advancedLocaleFields.length">
+                            <div class="centered">There are currently no advanced options available</div>
+                        </div>
                     </div>
-                </div>
+                </div> -->
 
                 <!-- Remin section -->
                 <div *ngIf="baseJson" [formGroup]="reminForm">
-                    <div class="centered"><strong>Remin</strong></div>
+                    <div class="centered"><strong>Organic Matter Rates</strong></div>
                     <div class="section-item">
                         <div class="form-row" *ngFor="let reminField of basicReminFields">
-                            <div>{{ reminField.param }}</div>
+                            <div>{{ reminField.displayName }}</div>
                             <div class="vertical-center">
                                 <div>
-                                    <input type="number" class="input-comid" formControlName="{{ reminField.param }}" matTooltip="{{ reminField.param }}"/>
+                                    <input type="number" class="input-number" formControlName="{{ reminField.param }}" matTooltip="{{ reminField.longName }}"/> {{ reminField.unit }}
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div>Advanced<mat-icon class="icon-panel-toggle" matTooltip="See Advanced Options">expand_more</mat-icon></div>
+                    <div>Advanced<mat-icon class="icon-panel-toggle" matTooltip="See Advanced Options NOT YET IMPLEMENTED"
+                        (click)="toggleAdvanced('remin')">expand_more</mat-icon></div>
+                    <div class="section-item" *ngIf="showReminAdvanced">
+                        <div class="form-row" *ngFor="let reminField of advancedReminFields">
+                            <div>{{ reminField.displayName }}</div>
+                            <div class="vertical-center">
+                                <div>
+                                    <input type="number" class="input-number" formControlName="{{ reminField.param }}" matTooltip="{{ reminField.longName }}"/> {{ reminField.unit }}
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="section-item" *ngIf="showReminAdvanced && !advancedReminFields.length">
+                        <div class="centered">There are currently no advanced options available</div>
+                    </div>
                 </div>
             </div>
 
@@ -141,7 +190,7 @@
             <div class="container-item" *ngIf="network.network && baseJson">
                 <div class="section-heading">
                     <div id="this is just here as a spacer"></div>
-                    <strong class="section-heading-center">Output State Variables</strong>
+                    <strong class="section-heading-center">State Variable Initial Values</strong>
                     <div>
                         <mat-icon class="icon-panel-toggle float-right" matTooltipPosition="right" matTooltip="Collapse section">expand_less</mat-icon>
                     </div>
@@ -151,7 +200,7 @@
                         <div>{{ variable.PName }}</div>
                         <div class="vertical-center">
                             <div>
-                                <input type="number" class="input-comid" value="{{ variable.InitialCond }}" matTooltip="{{ variable.PName }}"/>
+                                <input type="number" class="input-number" value="{{ variable.InitialCond }}" matTooltip="{{ variable.PName }}"/>
                                 {{ variable.LoadingUnit }}
                             </div>
                         </div>
@@ -172,13 +221,13 @@
             </div>
         </div>
         <div *ngIf="baseJson && network.network" class="section-item">
-            <div class="button" (click)="clearBaseJson()">Reset Base Simulation</div>
-            <div class="button" *ngIf="!simExecuting" (click)="executeSimulation()">Execute Aquatox Simulation</div>
+            <div class="button" (click)="clearBaseJson()">Reset Simulation</div>
+            <div class="button" *ngIf="!simExecuting" (click)="executeSimulation()">Execute Simulation</div>
         </div>
     </div>
 
     <div *ngIf="simExecuting || simCompleted">
         <app-execution-panel></app-execution-panel>
-        <div class="button" (click)="resetSimulation()">reset simulation</div>
+        <div class="button" (click)="resetSimulation()">Reset Simulation</div>
     </div>
 </div>
